// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberLiteralTypeTransformer > renders a number literal type 1`] = `
{
  "const": 42,
  "type": "number",
}
`;

exports[`numberLiteralTypeTransformer > renders direct number literal constraints 1`] = `
{
  "allOf": [
    {
      "maximum": 9007199254740991,
    },
    {
      "minimum": -9007199254740991,
    },
    {
      "exclusiveMinimum": 3,
    },
    {
      "minimum": 4,
    },
    {
      "exclusiveMaximum": 7,
    },
    {
      "maximum": 6,
    },
  ],
  "anyOf": [
    {
      "exclusiveMaximum": 0,
    },
    {
      "exclusiveMinimum": 0,
    },
  ],
  "const": 42,
  "exclusiveMaximum": 9,
  "exclusiveMinimum": 1,
  "maximum": 8,
  "minimum": 2,
  "multipleOf": 2,
  "type": "integer",
}
`;

exports[`numberLiteralTypeTransformer > renders repeated number literal bounds with and without an existing allOf 1`] = `
[
  {
    "allOf": [
      {
        "maximum": 9007199254740991,
      },
      {
        "minimum": -9007199254740991,
      },
      {
        "maximum": 0,
      },
    ],
    "const": 42,
    "maximum": 10,
    "type": "number",
  },
  {
    "allOf": [
      {
        "minimum": 0,
      },
    ],
    "const": 42,
    "minimum": 1,
    "type": "number",
  },
  {
    "allOf": [
      {
        "exclusiveMaximum": 0,
      },
    ],
    "const": 42,
    "exclusiveMaximum": 10,
    "type": "number",
  },
  {
    "allOf": [
      {
        "exclusiveMinimum": 0,
      },
    ],
    "const": 42,
    "exclusiveMinimum": 1,
    "type": "number",
  },
  {
    "allOf": [
      {
        "exclusiveMaximum": 9,
        "exclusiveMinimum": 1,
      },
    ],
    "const": 42,
    "exclusiveMaximum": 10,
    "type": "number",
  },
  {
    "allOf": [
      {
        "maximum": 9,
        "minimum": 1,
      },
    ],
    "const": 42,
    "maximum": 10,
    "type": "number",
  },
  {
    "allOf": [
      {
        "exclusiveMinimum": 2,
      },
    ],
    "const": 42,
    "exclusiveMinimum": 1,
    "type": "number",
  },
  {
    "allOf": [
      {
        "minimum": 2,
      },
    ],
    "const": 42,
    "minimum": 1,
    "type": "number",
  },
  {
    "allOf": [
      {
        "exclusiveMaximum": 9,
      },
    ],
    "const": 42,
    "exclusiveMaximum": 10,
    "type": "number",
  },
  {
    "allOf": [
      {
        "maximum": 9,
      },
    ],
    "const": 42,
    "maximum": 10,
    "type": "number",
  },
]
`;

exports[`numberLiteralTypeTransformer > renders repeated number literal constraints with allOf and anyOf 1`] = `
{
  "allOf": [
    {
      "maximum": 0,
    },
    {
      "minimum": 0,
    },
    {
      "exclusiveMaximum": 0,
    },
    {
      "exclusiveMinimum": 0,
    },
    {
      "exclusiveMaximum": 8,
      "exclusiveMinimum": 3,
    },
    {
      "exclusiveMaximum": 7,
      "exclusiveMinimum": 4,
    },
    {
      "maximum": 6,
      "minimum": 5,
    },
    {
      "maximum": 5,
      "minimum": 5,
    },
    {
      "maximum": 9007199254740991,
    },
    {
      "minimum": -9007199254740991,
    },
    {
      "maximum": 9007199254740991,
    },
    {
      "minimum": -9007199254740991,
    },
  ],
  "anyOf": [
    {
      "exclusiveMaximum": 0,
    },
    {
      "exclusiveMinimum": 0,
    },
    {
      "exclusiveMaximum": 0,
    },
    {
      "exclusiveMinimum": 0,
    },
  ],
  "const": 42,
  "exclusiveMaximum": 9,
  "exclusiveMinimum": 2,
  "maximum": 10,
  "minimum": 1,
  "type": "number",
}
`;
